# architecture-cortexm-xpack

./: .clang-format  .cproject  .gitignore  .npmignore  .project  .xcdl.json  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTES.md  README-MAINTAINER.md  README.in.md  README.md  meson.build  module.json  package.json  xpack.json
device-sources/: CMakeLists.txt
device-sources/meta/: config.cmake
device/include/micro-os-plus/architecture-cortexm/startup/: hooks.h
device/include/micro-os-plus/rtos/port/: declarations-c.h  declarations.h  defines.h  inlines.h
device/include/rtos/port/: defines.h
device/meta/: config.cmake  xpack-helper.cmake
device/src/: exception-handlers.cpp
device/src/diag/: trace-itm.cpp  trace-segger-rtt.cpp
device/src/rtos/port/: os-core.cpp
device/src/startup/: initialise-interrupts-stack.cpp  initialize-hardware-early.c  initialize-hardware.c  initialize-interrupts-stack.cpp  terminate.cpp
include/cmsis-plus/rtos/port/: os-c-decls.h  os-decls.h  os-inlines.h
include/cmsis-plus/rtos/port/diag/: drti.h  drtm.h
include/micro-os-plus/: architecture.h
include/micro-os-plus/arch-cortexm/: exception-handlers.h  instructions-inlines.h  instructions.h  semihosting-inlines.h
include/micro-os-plus/architecture-cortexm/: defines.h  exception-handlers.h  instructions-inlines.h  instructions.h  registers-inlines.h  registers.h  semihosting-inlines.h  types.h
include/micro-os-plus/rtos/port/: declarations-c.h  declarations.h  defines.h  inlines.h
linker-scripts/: sections-flash.ld  sections-ram.ld  sections.ld
meta/: CMakeLists.txt  micro-os-plus-achitecture-cortexm-config-version.cmake  micro-os-plus-architecture-cortexm-config-version.cmake  micro-os-plus-architecture-cortexm-config.cmake  xpack-helper.cmake
rtos-port-sources/: CMakeLists.txt
rtos-port-sources/meta/: config.cmake
rtos-port/include/micro-os-plus/rtos/port/: declarations-c.h  inlines.h
rtos-port/meta/: config.cmake
rtos-port/src/: port.cpp
scripts/: xpacks-helper.sh
sources/: CMakeLists.txt
sources-device/: CMakeLists.txt  README.md
sources-device/include/micro-os-plus/architecture-cortexm/startup/: hooks.h
sources-device/src/diag/: trace-itm.cpp
sources-device/src/startup/: initialize-hardware.c
sources/include/micro-os-plus/architecture-cortexm/: defines.h
src/: _init_fini.c  exception-handlers.cpp  terminate.cpp
src/diag/: trace-itm.cpp  trace-segger-rtt.cpp
src/rtos/: os-core.cpp
src/rtos/port/: drti.cpp  drtm.cpp  os-core.cpp
src/startup/: initialise-interrupts-stack.cpp  initialize-hardware-early.c  initialize-hardware.c
tests/: CMakeLists.txt
tests/cmsis-rtos-valid/cmsis-plus/rtos/: os-app-config.h
